# lab_patterns

./: .gitignore  CMakeLists.txt  Progression.cpp  Progression.h  StrategySort.cpp  StrategySort.h  main.cpp  task_1.cpp  task_1.h  task_10.cpp  task_10.h  task_2.cpp  task_2.h  task_3.cpp  task_3.h  task_4.cpp  task_4.h  task_5.cpp  task_5.h  task_6.cpp  task_6.h  task_7.cpp  task_7.h  task_8.cpp  task_8.h  task_9.cpp  task_9.h
Examples/: Adapter.cpp  Adapter.h  Singleton.cpp  Singleton.h
